# hmm_tblout

./: Cargo.toml  LICENSE  README.md
data/: nhmmer.tbl
examples/: print_coordinates.rs
src/: error.rs  lib.rs  reader.rs  record.rs  writer.rs
