[package]
name = "hmm_tblout"
version = "0.4.0"
edition = "2021"
authors = ["Max Brown <max.carter-brown@aru.ac.uk>"]
description = "Parse nhmmer tblout files."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ARU-life-sciences/hmm_tblout"
keywords = ["parser", "hmmer"]
categories = ["parsing"]
